// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test BtnsPlaying component BtnsPlaying component is created and rendered correctly  when isPlaying=false 1`] = `
<button
  className="player__play"
  onClick={[Function]}
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      xlinkHref="#play-s"
    />
  </svg>
  <span>
    Play
  </span>
</button>
`;

exports[`Test BtnsPlaying component BtnsPlaying component is created and rendered correctly when isPlaying=true 1`] = `
<button
  className="player__play"
  onClick={[Function]}
  type="button"
>
  <svg
    height="21"
    viewBox="0 0 14 21"
    width="14"
  >
    <use
      xlinkHref="#pause"
    />
  </svg>
  <span>
    Pause
  </span>
</button>
`;
